<resources>
    <string name="app_name">NCC दर्पण</string>
    <string name="item1">Change Language</string>
    <string name="item2">MemberShip</string>
    <string name="item3">Gallery</string>
    <string name="item4">My Products</string>
    <string name="item5">Setting</string>
    <string name="item6">Query/Feedback</string>
    <string name="item7">Share</string>
    <string name="item8">ViewProducts</string>
    <string name="add_mob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_video_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_mock_test_list">MockTest ListActivity</string>
    <string name="ncc_item1">ABOUT NCC</string>
    <string name="ncc_item2">ENROLMENT</string>
    <string name="ncc_item3">TRAINING</string>
    <string name="ncc_item4">SYLLABUS</string>
    <string name="ncc_item6">COC\'S</string>
    <string name="ncc_item7">INCENTIVES &amp; BENEFITS</string>
    <string name="ncc_item8">EXAMINATION</string>
    <string name="ncc_item9">ANO\'S AND INSTITUTION</string>
    <string name="ncc_item10">CADET\'S AUTHORISATION</string>
    <string name="ncc_item11">POLICIES</string>
    <string name="ncc_item12">Sample Papers</string>
    <string name="ncc_item13">Downloads</string>
    <string name="about_ncc_item1">INTRODUCTION</string>
    <string name="about_ncc_item2">ORGANISATION</string>
    <string name="about_ncc_item3">AIMS</string>
    <string name="about_ncc_item5">MOTTO</string>
    <string name="about_ncc_item6">CORE VALUES</string>
    <string name="about_ncc_item7">NCC SONG</string>
    <string name="about_ncc_item8">NCC FLAG</string>
    <string name="about_ncc_item9">NCC PLEDGE</string>
    <string name="about_ncc_item10">CADET COMMANDMENTS</string>
    <string name="institutional_item1">FEATURES</string>
    <string name="institutional_item2">TRAINING PROGRAM</string>
    <string name="institutional_item3">SOCIAL SERVICE AND COMMUNITY DEVELOPMENT</string>
    <string name="institutional_item4">NCC CAMP SOP</string>
    <string name="institutional_item5">TYPES OF NCC CAMPS</string>
    <string name="institutional_item6">ATTACHMENT TRAINING</string>
    <string name="institutional_item7">ADVENTURE TRAINING</string>
    <string name="institutional_item8">SPORTS</string>
    <string name="sly_item1">BLOCK SYLLABUS For SD/SW</string>
    <string name="sly_item2">DETAILED SYLLABUS For SD/SW</string>
    <string name="sly_item3">BLOCK SYLLABUS For JD/JW</string>
    <string name="sly_item4">DETAILED SYLLABUS For JD/JW</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="msg"><p>
    <span>Welcome to </span>\n<b>NCC दर्पण</b></p></string>
    <string name="signup">Signup</string>
    <string name="intro_frg1">
         <![CDATA[
 <p>
        The Cadet Corps Committee which was formed on 29 Sep 1946 with Pt HN Kunzru as chairman held six meetings in South Block,
        New Delhi.\t\t
        At the same time, Pt HN Kunzru formed sub-committees which were sent on study tours in all the main provinces of pre-independent
        India including provinces which are now located in Bangladesh and Pakistan.
        One sub-committee was also sent on tour to Great Britain and France from 15 Feb 1947 to 31 Mar 1947 to study the Youth
        and Cadet organisations in those countries.<br><br>

        The Cadet Corps Committee carried out exhaustive study of the problem of youth in India.
        Its sub-committees after their tour at home and abroad submitted their report to the Government of India in Mar 1947.
        Soon after the report was submitted, a far reaching political development began to impact the country, due to which the
        Cadet Corps Scheme had to be kept in abeyance. The religious strife which then was at its zenith, ultimately led to the
        partition of the country into India and Pakistan.<br><br>

       On the stroke of midnight of 14/15 Aug 1947, India achieved her independence.
       Immediately after independence, India was confronted with problems of formidable magnitude concerning not only
       repatriation of millions of displaced persons from Pakistan but also a full scale invasion of Kashmir by the Armed
       tribesmen supported by Pakistan. The armed forces had to rush to retrieve Kashmir at a time when they were already
       pre-occupied with the internal problem of maintaining law and order during the country's initial stage of consolidation.<br><br>

       The war in Kashmir and the consequent loss of a portion of Indian territory; the open support of Western Powers to Pakistan
       in the Security Council of the United Nations, made it more than evident to the Indian leaders that they not only had to strengthen
       the Armed Forces but also create sufficient strength of reserves, who could take up arms, when required.
       The gravity of time and event found expression in the Indian Legislature through anxious and pressing demand for military training of
       young men and women throughout the country.</p>
]]>
    </string>
    <string name="intro_frg2">
  <![CDATA[<p>
 At this juncture, Prime Minister PtJawaharLal Nehru at the behest of SardarBaldev Singh, the then Defence Minister and
 SardarVallabhbhai Patel, then Home Minister, took out the Kunzuru Committee Report for a serious studyfrom the shelves of
 the Defence Department. On 05 Dec 1947, after being approved by the Defence Committee the copy of the Cadet Corps Committee
 Report was sent to the Chief Secretaries and Chief Commissioners of all Provincial Govts (now called State Govts) for
 their comments. The consent of Provincial Govts were required because they were responsible for the administration of the
 educational institutions in their respective provinces and thus the success of the Cadet Corps scheme largely depended on
 their initiative. Replies received from the provinces in Jan 1948, show that they all agreed in principal with the Cadet
 Corps Scheme submitted by the Kunzuru Committee.</p>]]>
    </string>
    <string name="aim1">
         <![CDATA[<p>
        The ‘Aims’ of the NCC laid out in 1988 have stood the test of time and continue to meet the requirements expected
        of it in the current socio–economic scenario of the country. The NCC aims at developing character, comradeship,
        discipline, a secular outlook, the spirit of adventure and ideals of selfless service amongst young citizens.
        Further, it aims at creating a pool of organized, trained and motivated youth with leadership qualities in all walks
        of life, who will serve the Nation regardless of which career they choose. Needless to say,
        the NCC also provides an environment conducive to motivating young Indians to join the armed forces.
         </p>]]>
    </string>
    <string name="aim2">
         <![CDATA[<p>
       To Create a Human Resource of Organized, Trained and Motivated Youth,
       To Provide Leadership in all Walks of life and be Always Available for the Service of the Nation.
       To Provide a Suitable Environment to Motivate the Youth to Take Up a Career in the Armed Forces.
         </p>]]>
    </string>
    <string name="aim3">
         <![CDATA[<p>
      To Develop Character, Comradeship, Discipline, Leadership, Secular Outlook, Spirit of Adventure,
      and Ideals of Selfless Service amongst the Youth of the Country.  </p>]]>
    </string>
    <string name="moto">
         <![CDATA[
         <h4><b>MOTTO OF NCC:Unity and Discipline</b></h4>
         <p>The need for having motto for the Corps was discussed in the 11th Central Advisory Committee (CAC) meeting held
          on 11 Aug 1978. The mottos suggested were "Duty and Discipline"; "Duty, Unity and Discipline"; "Duty and Unity";
         "Unity and Discipline". The final decision for selection of
          <b>"Unity and Discipline"</b> as motto for the NCC was taken in the 12th CAC meeting held on 12 Oct 1980.</p>]]>
    </string>
    <string name="objective">  <![CDATA[
     The 
        activities of the NCC will be conducted with the following objectives:-

<div><span>1.</span><span>Train </span><span>volunteer youth to become confident, committed and competent leaders in all walks of life</span><span>.</span></div>

<p><span>2. Enhance </span><span>awareness levels of cadets to become responsible citizens of the country</span><span>.</span></p>

<p><span >3. Provide </span><span>opportunities and encourage cadets to enrich their knowledge, develop communication skills and build character</span><span>.</span></p>

<p ><span>4. Conduct </span><span>social activities and community development </span><span>programmes</span><span>, to make constructive contributions towards society</span><span>.</span></p>
        
<p ><span>5. Undertake </span><span>adventure activities to hone leadership qualities and risk taking abilities</span><span>.</span></p>

<p ><span>6. Provide </span><span>a platform to launch good-will ambassadors to project the image of the country overseas</span><span>.</span></p>

<p ><span>7.</span><span> </span><span>Conduct </span><span>military training to develop awareness about Armed Forces, Leadership skills and military value and thus, provide an environment to motivate cadets to join the Armed Forces.</span><span> </span></p>

    ]]></string>
    <string name="core">
         <![CDATA[
    <h4>CORE VALUES</h4>
    <b>The NCC is a responsive, learning and continuously evolving organization. Its activity is guided by certain core values that we endeavour to instill among all ranks of the NCC. These include the following:</b>

<p><span><strong>(A)</strong> A sense of patriotic commitment to encourage cadets to contribute to national development.</span></p>
<p><span><strong>(B) </strong> Respect for diversities in religion, language, culture, ethnicity, life style and habitat to instill a sense of National unity and social cohesion.</span></p>
<p><span><strong>(C)</string>
    <string name="subject">Enter Subject</string>
    <string name="write_message">Write Your Message Here</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="correct_q">Correct Q:</string>
    <string name="test_name">Test Name</string>
    <string name="todo">TODO</string>
    <string name="_30">30</string>
    <string name="mock_test_1">Mock Test 1</string>
    <string name="questions">Questions:</string>
    <string name="good_job">GOOD JOB</string>
</resources>