<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.tsa.nccapp.ContactUsActivity">
        <include layout="@layout/app_toolbar" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_boarder" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_boarder" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/subject"
            android:entries="@array/feedback"
            android:background="@drawable/background_boarder"
            android:hint="@string/subject"
            android:paddingLeft="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/msg"
            android:background="@drawable/background_boarder"
            android:gravity="top"
            android:hint="@string/write_message"
            android:paddingLeft="10dp"
            android:paddingTop="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:weightSum="1.0">

            <Button
                style="@style/HorizontalWeight"
                android:layout_marginRight="30dp"
                android:layout_weight=".5"
                android:background="@drawable/clear_button"
                android:id="@+id/clear"
                android:text="@string/clear"
                android:textColor="@color/white" />

            <Button
                style="@style/HorizontalWeight"
                android:layout_marginLeft="30dp"
                android:layout_weight=".5"
                android:background="@drawable/send_button"
                android:id="@+id/send"
                android:text="@string/send"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
